Fixes missing background changes

--- a/frontend/src/_styles/license.scss
+++ b/frontend/src/_styles/license.scss
@@ -859,7 +859,7 @@
     width: 100%;
     height: 88px;
     border-top: 1px solid var(--slate5) !important;
-    background: var(--base);
+    background: var(--surfaces-surface-01);
     margin-top: 0px !important;
 }
 
